--- a/blog/templates/blog/blog_search.html
+++ b/blog/templates/blog/blog_search.html
@@ -34,7 +34,7 @@
             <a href="{{ blog.get_absolute_url }}">
                 <div class="card mb-3 border rounded
                 {% if blog.category  == 'Dieting' %} border border-primary 
-                {% elif blog.category  == 'Recover' %} border border-warning 
+                {% elif blog.category  == 'Recovery' %} border border-warning 
                 {% elif blog.category  == 'Covid-19' %} border border-danger 
                 {% elif blog.category  == 'Endurance' %} border border-info
                 {% else %} border border-success {% endif %}" style=" max-width: 830px;">
@@ -71,7 +71,7 @@
             <a href="{{ blog.get_absolute_url }}">
                 <div class="card mb-3 border rounded
                 {% if blog.category  == 'Dieting' %} border border-primary 
-                {% elif blog.category  == 'Recover' %} border border-warning 
+                {% elif blog.category  == 'Recovery' %} border border-warning 
                 {% elif blog.category  == 'Covid-19' %} border border-danger 
                 {% elif blog.category  == 'Endurance' %} border border-info
                 {% else %} border border-success {% endif %}" style="max-width: 830px;">
@@ -105,7 +105,7 @@
             <a href="{{ blog.get_absolute_url }}">
                 <div class="card mb-3 border rounded
                 {% if blog.category  == 'Dieting' %} border border-primary 
-                {% elif blog.category  == 'Recover' %} border border-warning 
+                {% elif blog.category  == 'Recovery' %} border border-warning 
                 {% elif blog.category  == 'Covid-19' %} border border-danger 
                 {% elif blog.category  == 'Endurance' %} border border-info
                 {% else %} border border-success {% endif %}" style="max-width: 830px;">
@@ -181,7 +181,7 @@
                                     {% for item in category_menu %}
                                     <a class=" dropdown-item aw
                                     {% if item.name  == 'Dieting' %} text-primary 
-                                    {% elif item.name  == 'Recover' %} text-warning 
+                                    {% elif item.name  == 'Recovery' %} text-warning 
                                     {% elif item.name  == 'Covid-19' %} text-danger 
                                     {% elif item.name  == 'Members' %} text-light 
                                     {% elif item.name  == 'Endurance' %} text-info
