--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -159,7 +159,7 @@
     </div>
 
     <div class="row row justify-content-center ">
-        {% for product in display_items %}
+        {% for product in sales_items %}
         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
             <div class="card w-100 h-100 border-1">
                 <a class="ripple-surface   mx-auto" href="{% url 'products:product_detail' product.id %}">
