--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -1,7 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Montserrat:ital,wght@0,600;1,400&display=swap");
 
+#container {
+    background: url(/static/images/evan-wise-blog-bg.jpg) no-repeat center center fixed;
+    height: fit-content;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: relative;
+    width: 100%;
+    min-width: 980px;
+    padding: 0;
+}
+
+
+
+
 #header {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0, 0.5);
     color: rgb(245, 245, 245);
 
 }
@@ -30,6 +46,7 @@ body::before {
 
 h1 {
     font-family: "Audiowide", sans-serif;
+    color: rgb(251, 252, 250);
 }
 
 #content-main {
@@ -61,17 +78,37 @@ a:visited {
 }
 
 .app-blog {
-    background-color: rgba(255, 0, 0, 0.267);
+    background-color: rgb(226, 114, 124);
 }
 
 .app-products {
-    background-color: rgba(30, 255, 0, 0.267);
+    background-color: rgb(106, 192, 150);
+}
+
+.app-checkout {
+    background-color: rgb(106, 192, 150);
 }
 
 .app-memberships {
-    background-color: rgba(255, 238, 0, 0.493);
+    background-color: rgba(229, 206, 33, 1);
 }
 
 .app-programs {
-    background-color: rgba(0, 0, 255, 0.205);
+    background-color: rgba(229, 206, 33, 1);
+}
+
+.app-account {
+    background-color: rgb(66, 164, 250);
+}
+
+.app-auth {
+    background-color: rgb(66, 164, 250);
+}
+
+.app-socialaccount {
+    background-color: rgb(66, 164, 250);
+}
+
+.app-sites {
+    background-color: rgb(66, 164, 250);
 }
