--- a/blog/templates/blog/blog_categories.html
+++ b/blog/templates/blog/blog_categories.html
@@ -43,18 +43,20 @@
             {% if screen_size == True %}
             <a href="{{ blog.get_absolute_url }}">
                 <div class="card mb-3 border rounded
-                {% if blog.category  == 'Dieting' %} border border-primary 
-                {% elif blog.category  == 'Recovery' %} border border-warning 
-                {% elif blog.category  == 'Covid-19' %} border border-danger 
-                {% elif blog.category  == 'Endurance' %} border border-info
-                {% else %} border border-success {% endif %}"" style=" max-width: 830px;">
+                        {% if blog.category  == 'Dieting' %} border border-primary 
+                        {% elif blog.category  == 'Recovery' %} border border-warning 
+                        {% elif blog.category  == 'Covid-19' %} border border-danger 
+                        {% elif blog.category  == 'Endurance' %} border border-info
+                        {% else %} border border-success {% endif %}" style=" max-width: 830px;">
                     <div class="row no-gutters rounded">
-                        <div class="col-md-4 bg-black">
+                        <div class="col-md-4 bg-black rounded">
                             <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img" alt="...">
                         </div>
                         <div class="col-md-8 bg-black rounded">
                             <div class="card-body bg-black rounded">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
+                                <p class="text-center text-wht"> <small class="text-wht">Author: </small>
+                                    &nbsp;{{ blog.author|title }}</p>
                                 <small class="text-muted"><i
                                         class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
@@ -80,20 +82,22 @@
             {% else %}
             {% if not forloop.counter|divisibleby:2  %}
             <a href="{{ blog.get_absolute_url }}">
-                <div class="card mb-3 rounded
+                <div class="card mb-3 
                         {% if blog.category  == 'Dieting' %} border border-primary 
                         {% elif blog.category  == 'Recovery' %} border border-warning 
                         {% elif blog.category  == 'Covid-19' %} border border-danger 
                         {% elif blog.category  == 'Endurance' %} border border-info
                         {% else %} border border-success {% endif %}" style="max-width: 830px;">
-                    <div class="row no-gutters rounded">
+                    <div class="row no-gutters rounded-left ">
                         <div class="col-md-4 bg-black rounded">
                             <img src="{{ blog.thumbnail.url }}" class="card-img blog-list-img "
                                 alt="{{ blog.title|title }}">
                         </div>
-                        <div class="col-md-8 bg-black rounded">
+                        <div class="col-md-8 bg-black rounded-right ">
                             <div class="card-body bg-black rounded-right">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
+                                <p class="text-center text-wht"> <small class="text-wht">Author: </small>
+                                    &nbsp;{{ blog.author|title }}</p>
                                 <small class="text-muted"><i
                                         class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
@@ -118,17 +122,20 @@
             </a>
             {% else %}
             <a href="{{ blog.get_absolute_url }}">
-                <div class="card mb-3 rounded
+                <div class="card mb-3 
                 {% if blog.category  == 'Dieting' %} border border-primary 
                 {% elif blog.category  == 'Recovery' %} border border-warning 
                 {% elif blog.category  == 'Endurance' %} border border-info
                 {% elif blog.category  == 'Covid-19' %} border border-danger 
                 {% elif blog.category  == 'Members' %} border border-light 
                 {% else %} border border-success {% endif %}" style="max-width: 830px;">
-                    <div class="row no-gutters rounded">
+                    <div class="row no-gutters rounded-left">
+
                         <div class="col-md-8 bg-black rounded-left">
-                            <div class="card-body bg-black rounded-left">
+                            <div class="card-body bg-black rounded">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
+                                <p class="text-center text-wht"> <small class="text-wht">Author: </small>
+                                    &nbsp;{{ blog.author|title }}</p>
                                 <small class="text-muted"><i
                                         class="mx-2 text-wht fad fa-tags"></i>{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small><span
