added new class product details not workong yet

--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -26,8 +26,9 @@
                 <h1 class="mt-4 aw text-center"> {{ blog.title|title }}</h1>
                 <!-- Author -->
                 <p class="lead">
-                    By: {{ blog.author|title }}
-
+                    <a href="{% url 'profiles:ShowProfilePage' blog.author.id %}">
+                        By: {{ blog.author|title }}
+                    </a>
                     {% if  user.is_authenticated and user == blog.author %}
                     <span><a class="font-small ml-3 mb-0 text-grn" href="{{ blog.get_update_url }}"> (Edit)</a></span>
                     <span class="font-small mb-0 text-wht">/</span>
