added cbv to profiles and changed view names

--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -20,12 +20,12 @@
                 <p class="text-wht aw display-3 text-center">Focus Fitness</p>
                 <h1 class="aw font-lrg"><span class="aw font-lrg mr-1 text-primary">Don't</span><span
                         class="aw font-lrg m-1 text-warning">Just</span><span
-                        class="aw font-lrg m-1 text-red">Live.</span><span
+                        class="aw font-lrg m-1 text-red">Survive.</span><span
                         class="aw font-lrg m-1 text-success">Thrive!</span>
                 </h1>
                 <p class="text-wht">We are <span class="aw font-lrg"> Focus Fitness.com.</span> Your transformation is
                     our passion. We are your trainer,
-                    younutritionist, your supplment expert, your lifting partner, your support group. We privide the
+                    your nutritionist, your supplment expert, your lifting partner, your support group. We privide the
                     technology, tools, and products you need to burn fat, build muscle, and become your best self. </p>
             </div>
 
