--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
                 Focus Fitness
             </h1>
             <h2 class="aw text-wht mx-auto text-center">
-                Dont Just Live. Thrive!
+                Dont Just Survive. Thrive!
             </h2>
             <div class="row d-flex justify-content-center">
                 <div class=" col-12 d-flex d-flex justify-content-center no-gutters">
