--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-12  bg-black-a rounded-15">
-                    <h4 class="aw text-wht text-center">{{ user.username|title }}</h4>
+                    <h4 class="aw text-wht text-center">Profile Admin</h4>
                     <h6 class="aw text-wht text-center">{{ user.email }}</h6>
                     <div class="profile-overlay">
                         <ul>
@@ -37,7 +37,7 @@
                             <li class="pt-2">
                                 <img src="https://img.icons8.com/fluent/32/000000/map-marker.png"
                                     alt="Shipping Setails" />
-                                <a class="aw text-wht text-center mx-2" href="{% url 'profiles:profile_details' %}">
+                                <a class="aw text-wht text-center mx-2" href="{% url 'profiles:shipping_details' %}">
                                     Shipping Details
                                 </a>
                             </li>
