--- a/profiles/templates/profiles/shipping_details.html
+++ b/profiles/templates/profiles/shipping_details.html
@@ -9,7 +9,7 @@
     <div class="container ">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a class="text-wht aw pl-2" href="{% url 'profiles:profile' %}">Dashboard</a>
+                <a class="text-wht aw pl-2" href="{% url 'profiles:profile'  %}">Dashboard</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 <small class="text-wht aw">Shipping Details</small>
             </div>
@@ -28,7 +28,11 @@
                         <form method="POST" action="" class=" my-2" id="shipping-update-form">
                             {% csrf_token %}
                             {{ form|crispy }}
-                            <button type="submit" class="  dark-btn uppercase col-12 aw rounded-10 px-4 py-2">Update
+                            <button type="submit"
+                                class="btn btn-warning text-wht uppercase col-12 aw rounded-10 px-4 py-2">
+                                <span>
+                                    <img src="https://img.icons8.com/fluent/44/000000/available-updates.png" />
+                                </span> Update
                                 Shipping Details</button>
                         </form>
                     </div>
