--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -133,9 +133,9 @@
                     <p class=" mx-auto text-center card-text">Subscribe today and be welcomed into our community. For
                         just $20 per month, our members gain access to our professional personal trainers that have made
                         a host of training programs ranging from Strength training to dieting with video on how to and
-                        gym workouts. New content updated often and will keep you in tip-top shape. As a added bounces
-                        all subscribed members get a discount in the Focus Shop. We believe that being fit in the body
-                        keeps a fit mind. So subscribe today and Don’t Just Survive. Thrive!</p>
+                        gym workouts. New content is updated often and will keep you in tip-top shape. As an added
+                        bounces all subscribed members get a discount in the Focus Shop. We believe that being fit in
+                        the body keeps a fit mind. So subscribe today and Don’t Just Survive. Thrive!</p>
 
                     {% if screen_size == True %}
                     <div class="text-center">
