--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -156,7 +156,7 @@
                     <div class="row ">
                         {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                            <div class="card w-100 h-100 border-1">
+                            <div class="card w-100 h-100 fixed-shadow border-1">
 
 
                                 {% if product.in_stock == True %}
@@ -260,13 +260,6 @@
 
 {% block postloadjs %}
 {{ block.super }}
-
-<script type="text/javascript">
-    $('.btt-link').click(function (e) {
-
-        window.scrollTo(0, 0)
-    })
-</script>
 
 <script type="text/javascript">
     $('#sort-selector').change(function () {
