--- a/programs/templates/programs/program_list.html
+++ b/programs/templates/programs/program_list.html
@@ -26,7 +26,7 @@
             <br>
             {% for program in programs  %}
             {% if not forloop.counter|divisibleby:2  %}
-            <a href="{{ program.get_absolute_url }}" class="text-wht rounded">
+            <a href="{{ program.get_absolute_url }}" class="text-wht rounded fixed-shadow">
                 <div class="card  border border-light hover-shadow-col-lit rounded" style="max-width: 40rem;">
                     <div class="row no-gutters  rounded">
                         <div class="col-md-4 bg-black rounded">
@@ -44,7 +44,7 @@
             </a>
             <br>
             {% else %}
-            <a href="{{ program.get_absolute_url }} " class="text-wht rounded ">
+            <a href="{{ program.get_absolute_url }} " class="text-wht rounded fixed-shadow">
                 <div class="card border border-light hover-shadow-col-lit rounded" style="max-width: 40rem;">
                     <div class="row d-flex flex-row-reverse no-gutters text-wht rounded">
                         <div class="col-md-4 bg-black rounded">
