--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,7 +75,6 @@ img {
 
 
 
-
 .fixed-shadow {
   -webkit-box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
@@ -848,6 +847,25 @@ nav {
   overflow-y: auto;
 }
 
+#dash_history::-webkit-scrollbar {
+  width: 13px;
+  height: 10px;
+}
+
+#dash_history::-webkit-scrollbar-thumb {
+  background: #201c29;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  box-shadow: inset 2px 2px 2px rgb(209, 208, 208), inset -2px -2px -2px rgba(0, 0, 0), .02;
+}
+
+#dash_history::-webkit-scrollbar-track {
+  background: linear-gradient(90deg, rgb(32, 28, 41), rgb(32, 28, 41) 1px, rgb(23, 20, 29) 0, rgb(23, 20, 29));
+}
+
 .video-width {
   max-width: 250px;
 }
@@ -855,12 +873,7 @@ nav {
 
 /* Footer */
 .footer-image {
-  /* background: url(/static/images/evan-wise-blog-bg.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
- */
+
   background-color: black;
 }
 
